# simple-http-server-rust

./: Cargo.toml  README.md  codecrafters.yml
src/: lib.rs  main.rs
