# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "http-server-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.98"                                   # error handling
bytes = "1.10.1"                                     # helps manage buffers
thiserror = "2.0.13"                                # error handling
tokio = { version = "1.47.1", features = ["full"] } # async networking
nom = "8.0.0"                                       # parser combinators
itertools = "0.14.0"                                # General iterator helpers
flate2 = "1.1"

[dev-dependencies]
pretty_assertions = "1.4.1"                         # nicer looking assertions

